Third times the charm?

--- a/config/Dockerfiles/Jenkinsfile
+++ b/config/Dockerfiles/Jenkinsfile
@@ -1,3 +1,4 @@
+// just make another commit..
 env.ghprbGhRepository = env.ghprbGhRepository ?: 'p3ck/linchpin'
 env.ghprbActualCommit = env.ghprbActualCommit ?: 'openshift'
 env.ghprbPullAuthorLogin = env.ghprbPullAuthorLogin ?: ''
